Fix fb login button not showing 100%

--- a/src/components/organisms/LoginForm/index.scss
+++ b/src/components/organisms/LoginForm/index.scss
@@ -68,6 +68,11 @@
    }
    .facebook-login-wrapper {
       display: flex;
+      justify-content: center;
       align-items: center;
+      width: 100%;
+      .fb-login-button.fb_iframe_widget {
+         width: inherit;
+      }
    }
 }
